chore: remove Groovy compilation from the build pipeline